# spn_sw

./: CMakeLists.txt  README.md  analyse.ipynb  main.cpp
fp/: CMakeLists.txt  main.cpp
fp/lib/: myFloat.cpp  myFloat.h  myFloat_types.h  op2.c  op2.h  pack.c  pack.h  util.c  util.h
psdd2spn/: example_03.psdd  example_03.spn  main.py  psdd.py  spn.py
src/: CMakeLists.txt  spn.cpp  spn.h  utils.cpp  utils.h
